# doc-processing

./: .gitignore  .gitmodules  Makefile.in  Markdown.md  README.md  configure  configure.ac  dependencies.txt  notes.txt  package-helper.mk  postinstall.in  stow.mk.in  todo.md  xsl-extension.xsl  zip.mk.in
diagram/: Makefile  doc-format-diagram.dot.m4
src-share/: common.xsl.xslext  doc-to-dependencies.xsl.m4  doc-to-fo.xsl.xslext  doc-to-groff.xsl.xslext  doc-to-schematron.xsl.m4  doc-to-xhtml.xsl.xslext  xml-catalog.xml
src/share/: common.xsl.xslext  doc-to-dependencies.xsl.m4  doc-to-schematron.xsl.m4  doc-to-text.xsl.xslext  doc-to-xhtml.xsl.xslext  doc.css.m4  doc.sch  doc.xsd  get-rules-id-map.xsl
src/share/doc-processing/: common.xsl.xslext  doc-to-dependencies.xsl  doc-to-docx-markdown.xsl.xslext  doc-to-markdown.xsl.xslext  doc-to-schematron.xsl  doc-to-text.xsl.xslext  doc-to-xhtml.xsl.xslext  doc.css.m4  doc.sch  doc.xsd  get-rules-id-map.xsl  reference.docx  xhtml-to-html4.01.xsl  xsl-functions.xsl
src/tests/: testDocProcessing.m4
static-share/: catalog.xml  doc.sch  extract-xml-blurbs.xsl
static/tests/dir1/: example1.xml
